Enable reference tests for the merge
Enable the "Merge" network targeting the "paris" fork.

Signed-off-by: Danno Ferrin <danno.ferrin@swirldslabs.com>